# coroio

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  net.hpp  new_header.html
.github/workflows/: c-cpp.yml
bench/: libevent_11400F_100_epoll.txt  libevent_11400F_100_poll.txt  libevent_11400F_100_select.txt  libevent_11400F_epoll.txt  libevent_11400F_poll.txt  libevent_11400F_select.txt  libevent_12800H_100_epoll.txt  libevent_12800H_100_poll.txt  libevent_12800H_100_select.txt  libevent_12800H_epoll.txt  libevent_12800H_poll.txt  libevent_12800H_select.txt  libevent_M1_100_kqueue.txt  libevent_M1_100_poll.txt  libevent_M1_100_select.txt  libevent_M1_kqueue.txt  libevent_M1_poll.txt  libevent_M1_select.txt  netlib_11400F_100_epoll.txt  netlib_11400F_100_poll.txt  netlib_11400F_100_select.txt  netlib_11400F_100_uring.txt  netlib_11400F_epoll.txt  netlib_11400F_poll.txt  netlib_11400F_select.txt  netlib_11400F_uring.txt  netlib_12800H_100_epoll.txt  netlib_12800H_100_poll.txt  netlib_12800H_100_select.txt  netlib_12800H_100_uring.txt  netlib_12800H_epoll.txt  netlib_12800H_poll.txt  netlib_12800H_select.txt  netlib_12800H_uring.txt  netlib_M1_100_kqueue.txt  netlib_M1_100_poll.txt  netlib_M1_100_select.txt  netlib_M1_kqueue.txt  netlib_M1_poll.txt  netlib_M1_select.txt  (+9 more)
coroio/: CMakeLists.txt  address.cpp  address.hpp  all.hpp  arena.hpp  base.hpp  corochain.hpp  epoll.cpp  epoll.hpp  init.cpp  init.hpp  iocp.cpp  iocp.hpp  kqueue.cpp  kqueue.hpp  loop.hpp  poll.cpp  poll.hpp  poller.hpp  promises.hpp  resolver.cpp  resolver.hpp  select.cpp  select.hpp  socket.cpp  socket.hpp  sockutils.cpp  sockutils.hpp  ssl.cpp  ssl.hpp  uring.cpp  uring.hpp  utils.cpp  win32_errors.cpp  win32_pipe.cpp  ws.cpp  ws.hpp
coroio/actors/: CMakeLists.txt  README.md  actor.cpp  actor.hpp  actorid.hpp  actorsystem.cpp  actorsystem.hpp  envelope_reader.cpp  envelope_reader.hpp  intrusive_list.hpp  messages.cpp  messages.hpp  messages_factory.cpp  messages_factory.hpp  node.cpp  node.hpp  queue.cpp  queue.hpp
coroio/backends/: epoll.cpp  epoll.hpp  iocp.hpp  kqueue.cpp  kqueue.hpp  poll.cpp  poll.hpp  select.cpp  select.hpp  uring.cpp  uring.hpp
coroio/dns/: CMakeLists.txt  resolver.cpp  resolver.hpp
coroio/http/: httpd.cpp  httpd.hpp
coroio/pipe/: pipe.cpp  pipe.hpp
coroio/ws/: utils.hpp  ws.cpp  ws.hpp
examples/: CMakeLists.txt  behavior_actors.cpp  bench.cpp  bench_actors.cpp  echo.cpp  echoclient.cpp  echoserver.cpp  echotest.cpp  hello_httpd.cpp  ping_actors.cpp  resolver.cpp  run_actors.sh  sslechoclient.cpp  sslechoserver.cpp  timers.cpp  wsclient.cpp
scripts/doxygen/: Doxyfile
src/: base.hpp  epoll.hpp  kqueue.hpp  loop.hpp  net.hpp  poll.hpp  poller.hpp  select.hpp  socket.hpp  uring.hpp
tests/: CMakeLists.txt  perf.h  server.crt  server.key  test_actors.cpp  test_http.cpp  test_pipe.cpp  testlib.h  tests.cpp
